# aigc-3d-amd-genai

./: .gitignore  LICENSE  README.md  cam_utils.py  gs_renderer.py  main.py  main2.py  mesh.py  mesh_renderer.py  requirements.txt  zero123.py
common/: global_constant.py
configs/: image.yaml  text.yaml  text_mv.yaml
diff-gaussian-rasterization/: CMakeLists.cuda.txt  CMakeLists.txt  ext.cpp  rasterize_points.cu  setup.cuda.py  setup.hip.py  setup.mix.py  setup.py
diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer_impl.cu  rasterizer_impl.h
geometry_prior/pcd/: pcd_util.py
geometry_prior/pcd/basic/: simple_object.py
guidance/: mvdream_utils.py  sd_utils.py
logs/: cake.mtl  cake_mesh.mtl  cookie.mtl  cookie_mesh.mtl  corgi_nurse_nvidia_mesh.mtl  ghost.mtl  ghost_mesh.mtl  ghost_model.ply  heart_icecream.mtl  heart_icecream_mesh.mtl  icecream.mtl  icecream_mesh.mtl
logs/aigc/object/crane_machine/: output_multi_img_amd.mtl  output_multi_img_amd_mesh.mtl
logs/aigc/person/: output.mtl  output_mesh.mtl  output_model.ply
logs/aigc/person/output/: shuo.mtl  shuo_amd.mtl  shuo_amd_mesh.mtl  shuo_amd_mv_mesh.mtl  shuo_amd_txt_mesh.mtl  shuo_amd_txt_mesh_after.pcd  shuo_mesh.mtl  shuo_prompt_mesh.mtl
logs/bak/: test.mtl  test_mesh.mtl  test_model.ply
simple-knn/: setup.py  simple_knn.cu
test/: rocm_profiler.py
